adjusted the dx.bat file to remove some extra echo's